--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div></div>');
-          var timestamp = tweet.created_at.toString()
+          var timestamp = '';
+          if (tweet.created_at.getHours() > 12) {
+            timestamp += (tweet.created_at.getHours() - 12) + ':'
+            + ('0' + tweet.created_at.getMinutes()).slice(-2) + 'pm';
+          } else {
+            timestamp += tweet.created_at.getHours() + ':'
+            + ('0' + tweet.created_at.getMinutes()).slice(-2) + 'am';
+          }
           $tweet.text('@' + tweet.user + ': ' + tweet.message + ' - ' + timestamp);
           $tweet.appendTo($body);
           index -= 1;
