--- a/index.html
+++ b/index.html
@@ -9,19 +9,43 @@
 
       $(document).ready(function(){
         var $body = $('body');
-        $body.html('<nav class="fixed-nav-bar"></nav><div class="content" style="margin-top: 50px;">').css(
+        $body.html('<nav class="fixed-nav-bar">\
+                    <div class="menu" style="width: 95%; height: 60px ;margin: 0 auto;">\
+                    <ul class="menu-items">\
+                          <li><a href="#">Refresh</a></li>\
+                          <li><a href="#">Live Mode</a></li>\
+                      </ul>\
+                    </div>\
+                  </nav>\
+                  <div class="content" style="margin-top: 65px;">\
+                  </div>').css(
                             {'background-size': 'cover',
                             'background-color': 'black'
                             });
         var $navBar = $('.fixed-nav-bar');
         var $content = $('.content');
+        var $menuItems = $('.menu-items');
+        var $menuLi = $('li');
+        var $links = $('a');
         $navBar.css({'position': 'fixed',
-                            'top': '0',
-                            'left': '0',
-                            'z-index': '9999',
-                            'width': '100%',
-                            'height': '50px',
-                            'background-color': '#000'});
+                        'top': '0',
+                        'left': '0',
+                        'z-index': '9999',
+                        'width': '100%',
+                        'height': '60px',
+                        'line-height': '60px',
+                        'background-color': '#000'});
+        $menuItems.css({'display': 'inline-block',
+                        'margin': '0',
+                        'padding': '0',
+                        'border': '0',
+                        'float': 'right',
+                        'font-size': '25px'});
+        $menuLi.css({'display': 'inline-block',
+                        'margin-right': '10px',
+                        'margin-left': '10px'});
+        $links.css({'text-decoration': 'none',
+                    'color': '#808080'});
         var index = streams.home.length - 1;
         var userStyles = {douglascalhoun: {bkgrnd: '#808080', color: 'white'},
                           mracus: {bkgrnd: '#BECACF', color: 'black'},
@@ -30,7 +54,7 @@
         while(index >= 0){
           var tweet = streams.home[index];
           var $tweet = $('<div class="' + tweet.user + '"></div>');
-/* Time-stamp to use later on in Upper right corner of tweet div */
+/* Time-stamp to use later on in tweet div */
           var timestamp = '';
           if (tweet.created_at.getHours() > 12) {
             timestamp += (tweet.created_at.getHours() - 12) + ':'
