--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       $(document).ready(function(){
         var $body = $('body');
         $body.html('<nav class="fixed-nav-bar">\
-                    <div class="menu" style="width: 95%; height: 60px ;margin: 0 auto;">\
+                    <div class="menu">\
                     <ul class="menu-items">\
                           <li><a href="#" class="update">Update Feed</a></li>\
                           <li><a href="#">Live Mode</a></li>\
@@ -23,27 +23,31 @@
                             'background-color': 'black'
                             });
         var $navBar = $('.fixed-nav-bar');
+        var $menu = $('.menu');
         var $content = $('.content');
         var $menuItems = $('.menu-items');
         var $menuLi = $('li');
         var $links = $('a');
+        $menu.css({'width': '95%',
+                   'height': '60px',
+                   'margin': '0 auto'});
         $navBar.css({'position': 'fixed',
-                        'top': '0',
-                        'left': '0',
-                        'z-index': '9999',
-                        'width': '100%',
-                        'height': '60px',
-                        'line-height': '60px',
-                        'background-color': '#000'});
+                    'top': '0',
+                    'left': '0',
+                    'z-index': '9999',
+                    'width': '100%',
+                    'height': '60px',
+                    'line-height': '60px',
+                    'background-color': '#000'});
         $menuItems.css({'display': 'inline-block',
-                        'margin': '0',
-                        'padding': '0',
-                        'border': '0',
-                        'float': 'right',
-                        'font-size': '25px'});
+                    'margin': '0',
+                    'padding': '0',
+                    'border': '0',
+                    'float': 'right',
+                    'font-size': '25px'});
         $menuLi.css({'display': 'inline-block',
-                        'margin-right': '10px',
-                        'margin-left': '10px'});
+                    'margin-right': '10px',
+                    'margin-left': '10px'});
         $links.css({'text-decoration': 'none',
                     'color': '#808080'});
         var userStyles = {douglascalhoun: {bkgrnd: '#808080', color: 'white'},
